# gdess

./: .databrickscfg  main.py  pyproject.toml
self_service/: access.py  asset.py  client.py  metadata.py  unitycatalog.py
self_service/client/: unitycatalog.py
self_service/unitycatalog/: access.py  asset.py
self_service/unitycatalog/devops/: deploy.py
tests/: test_client_unitycatalog.py  test_unitycatalog.py
